--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "random-picker",
+  "name": "random-pick-and-presenter",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
