Rename from pick to picker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "RPAP",
-  "name": "Random Pick and Presenter",
+  "name": "Random Picker and Presenter",
   "icons": [
     {
       "src": "favicon.ico",
