--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-full-screen": "^0.3.1",
+    "react-ga": "^3.1.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
